fixed / styled: z-index nav

--- a/frontend/src/assets/scss/base/_base.scss
+++ b/frontend/src/assets/scss/base/_base.scss
@@ -115,7 +115,7 @@ a {
 	}
 
 	& > .nav {
-		z-index: 1;
+		z-index: 999;
 		position: fixed;
 		top: 0;
 		right: 0;
